--- a/src/pages/cssDemo/buttons/style.css
+++ b/src/pages/cssDemo/buttons/style.css
@@ -14,14 +14,8 @@ p {
   font-size: 18px;
   color: #676767;
 }
-.frame {
-  margin: 40px auto;
-  text-align: center;
-}
-button {
-  margin: 20px;
-}
-.custom-btn {
+.ly-custom-btn {
+  margin: 10px;
   width: 200px;
   height: 40px;
   color: #fff;
@@ -39,6 +33,7 @@ button {
   4px 4px 5px 0px rgba(0,0,0,.1);
   outline: none;
 }
+
 
 /* 1 */
 .btn-1 {
