feature: react 个人电脑win11弹框组件

--- a/src/pages/window/component/appItem/style.less
+++ b/src/pages/window/component/appItem/style.less
@@ -4,8 +4,9 @@
   text-align: center;
   margin: 10px;
   padding: 10px;
+  cursor: pointer;
   &:hover{
-    background: #75d4d4;
+    background: #2b2828;
   }
 }
 .appItemIcon {
