--- a/src/pages/window/style.less
+++ b/src/pages/window/style.less
@@ -4,6 +4,8 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  background: #0b0028;
+  color: white;
 }
 .windowBody{
   overflow: hidden;
@@ -21,6 +23,7 @@
   border: 1px solid black;
   display: flex;
   overflow: hidden;
+  border-top: 1px solid #665c5c;
   &Left{
     display: flex;
     flex-direction: row;
