feature: react更新 拉伸

--- a/src/components/SimpleModal/style.less
+++ b/src/components/SimpleModal/style.less
@@ -22,13 +22,25 @@
     cursor: s-resize;
   }
   &Right {
-
+    position: absolute;
+    right: -@size-value;
+    height: 85%;
+    width: @size-value;
+    cursor: w-resize;
   }
   &Bottom {
-
+    position: absolute;
+    bottom: -@size-value;
+    width: 85%;
+    height: @size-value;
+    cursor: s-resize;
   }
   &Left {
-
+    position: absolute;
+    left: -@size-value;
+    height: 85%;
+    width: @size-value;
+    cursor: w-resize;
   }
 
 }
