--- a/src/pages/window/style.less
+++ b/src/pages/window/style.less
@@ -10,7 +10,7 @@
 .windowBody{
   overflow: hidden;
   flex: 1;
-
+  position: relative; // 这里的定位是为后续弹框定位做基地啊
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
