--- a/src/components/SimpleModal/style.less
+++ b/src/components/SimpleModal/style.less
@@ -1,9 +1,11 @@
 @size-value: 8px;
 @mover-size-value: 5px;
 .simpleModalContent { // modal
-  position: fixed;
-  top: 50%;
-  left: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: #191919;
   color: #fff;
   z-index: 100;
@@ -12,7 +14,7 @@
   opacity: 0;
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
+  border-radius: 0px;
   border: 1px solid #978383;
   &Top {
     position: absolute;
@@ -55,6 +57,14 @@
     border-radius: 10px 0 0 0;
     padding-left: 10px;
     position: relative;
+    overflow: hidden;
+    // 处理文字溢出的问题（结合flex布局和span元素进行处理）
+    &Span{
+      max-width: 100%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
   &Icons {
     border-radius: 0 8px 0 0;
@@ -91,5 +101,4 @@
   visibility: visible;
   opacity: 1;
   pointer-events: auto;
-  transform: translate(-50%,-50%);
 }
