feature: 处理弹框的层级关系

--- a/src/pages/window/style.less
+++ b/src/pages/window/style.less
@@ -51,6 +51,14 @@
     stroke-dashoffset: 778;
   }
 }
+
+
+.APPContentPadding {
+  padding: 10px;
+}
 .wxContent {
+  padding: 10px;
+}
+.myBlogContent {
   padding: 10px;
 }
