--- a/src/components/SimpleModal/style.less
+++ b/src/components/SimpleModal/style.less
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: #191919;
+  background: #202020 radial-gradient(#1a1f35 25%, #202020 100%) no-repeat fixed;;
   color: #fff;
   z-index: 100;
   visibility: visible;
@@ -49,7 +49,6 @@
 .simpleModalHeader {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #4d4b4b;
   &Title {
     flex: 1;
     display: flex;
