feature: 添加图标组件

--- a/src/pages/window/component/MenusFunction/styles.less
+++ b/src/pages/window/component/MenusFunction/styles.less
@@ -18,11 +18,15 @@
       position: relative;
       border: 1px solid transparent;
       font-size: 12px;
+      color: #c4baba;
+      display: flex;
+      align-items: center;
       &:active{
         border-color: white;
       }
       &:hover{
         background: #454545;
+        color: #ffffff;
       }
       svg {
         color: #0697cf;
