feature: 文件夹组件

--- a/src/components/SimpleModal/style.less
+++ b/src/components/SimpleModal/style.less
@@ -82,6 +82,7 @@
   flex: 1;
   overflow-y: auto;
   overflow-x: hidden;
+  display: flex; // 为了让下一级展开
   &::-webkit-scrollbar-thumb {
     background: rgba(0, 0, 0, 0.5);
     background-clip: padding-box;
