--- a/src/pages/window/style.less
+++ b/src/pages/window/style.less
@@ -62,3 +62,16 @@
 .myBlogContent {
   padding: 10px;
 }
+
+.ScrollStyle {
+  &::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.5);
+    background-clip: padding-box;
+    border: 6px solid transparent;
+    border-radius: 14px;
+    background: rgba(255, 255, 255, 0.5);
+  }
+  &::-webkit-scrollbar{
+    width: 5px;
+  }
+}
