--- a/src/pages/window/component/FolderBody/FolderTree/styles.less
+++ b/src/pages/window/component/FolderBody/FolderTree/styles.less
@@ -4,8 +4,8 @@
     width: 200px;
     position: relative;
     padding: 5px 6px;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden;
+    display: flex;
     &::after{
       content: '';
       position: absolute;
@@ -15,6 +15,11 @@
       width: 1px;
       background: white;
       transform: scale(.2,1);
+    }
+    &Content {
+      flex: 1;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
   }
 }
