--- a/src/pages/window/component/appItem/style.less
+++ b/src/pages/window/component/appItem/style.less
@@ -6,7 +6,7 @@
   padding: 10px;
   cursor: pointer;
   &:hover{
-    background: #2b2828;
+    background: rgba(255, 255, 255, 0.12);
   }
 }
 .appItemIcon {
