--- a/src/components/SimpleModal/style.less
+++ b/src/components/SimpleModal/style.less
@@ -63,6 +63,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      cursor:default;
     }
   }
   &Icons {
