--- a/src/pages/window/component/FolderBody/FolderItems/styles.less
+++ b/src/pages/window/component/FolderBody/FolderItems/styles.less
@@ -1,5 +1,50 @@
 .FolderItems {
   &Container {
     flex: 1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: baseline;
+    overflow: auto;
+    padding: 10px;
+  }
+  &Item {
+    height: 120px;
+    width: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5px;
+    cursor: pointer;
+    overflow: hidden;
+    padding: 10px;
+    border-radius: 10px;
+    &:hover{
+      background: rgb(136 136 136 / 10%);
+    }
+    &:active {
+      background: rgb(136 136 136 / 30%)
+    }
+    &Icon{
+      flex: 1;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      svg {
+        height: 100%;
+        width: 80%;
+        color: #93845b;
+      }
+    }
+    &Text {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      width: 100%;
+      text-align: center;
+      font-size: 16px;
+      color: #ffffff;
+    }
   }
 }
