feature: 解决拖拽时进入子元素一直触发 dragenter和dragleave的问题

--- a/src/pages/window/component/FolderBody/FolderTree/styles.less
+++ b/src/pages/window/component/FolderBody/FolderTree/styles.less
@@ -6,6 +6,13 @@
     padding: 5px 6px;
     overflow: hidden;
     display: flex;
+    &Dropping {
+      background: #3c2e2e;
+      border-radius: 5px;
+      & *{
+        pointer-events: none;
+      }
+    }
     &::after{
       content: '';
       position: absolute;
