--- a/src/pages/window/Webgl/style.less
+++ b/src/pages/window/Webgl/style.less
@@ -9,7 +9,8 @@
     cursor:pointer;
     background: #a7a8b8;
     padding: 5px;
-    margin: 10px;
+    margin: 20px 10px ;
+    display: inline;
     &:active{
       background: #a7a8b8;
       color: #562222;
