--- a/src/pages/window/component/ComponentsItems/style.less
+++ b/src/pages/window/component/ComponentsItems/style.less
@@ -3,7 +3,7 @@
     flex: 1;
     display: flex;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: flex-start;
     align-content: baseline;
     flex-direction: row;
   }
