feature: 解读图像处理过程

--- a/src/pages/window/component/WebglItems/Item/style.less
+++ b/src/pages/window/component/WebglItems/Item/style.less
@@ -7,6 +7,14 @@
     align-items: center;
     justify-content: center;
     padding: 15px;
+    max-width: 120px;
+    width: 120px;
+    overflow: hidden;
+    &Text {
+      width: 100%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
     &:hover{
       background: #1d1919;
       color: #ffffff;
