feature: 解读图像处理过程

--- a/src/pages/window/webglCommon/style.less
+++ b/src/pages/window/webglCommon/style.less
@@ -2,6 +2,11 @@
   &Container {
     border: 1px solid black;
   }
+  &Ui {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
   &Button {
     border: 1px solid black;
     border-radius: 5px;
