--- a/src/pages/window/component/WebglItems/Item/style.less
+++ b/src/pages/window/component/WebglItems/Item/style.less
@@ -14,6 +14,7 @@
       width: 100%;
       overflow: hidden;
       text-overflow: ellipsis;
+      text-align: center;
     }
     &:hover{
       background: #1d1919;
