--- a/src/pages/window/webglCommon/style.less
+++ b/src/pages/window/webglCommon/style.less
@@ -1,4 +1,9 @@
 .canvas{
+  &Operates {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
   &Container {
     border: 1px solid black;
   }
