--- a/src/pages/window/webglCommon/style.less
+++ b/src/pages/window/webglCommon/style.less
@@ -12,6 +12,9 @@
     right: 0;
     top: 0;
   }
+  &Oper{
+    margin: 15px;
+  }
   &Button {
     border: 1px solid black;
     border-radius: 5px;
